Fix reverse ellipsis for overflow text

--- a/src/components/Typography/typography.scss
+++ b/src/components/Typography/typography.scss
@@ -202,6 +202,14 @@ blockquote {
         */
         content: "\200e";
     }
+
+    &:before {
+        /*
+            hex value for &lrm;
+            @see https://stackoverflow.com/questions/20798667/#comment98304322_42551367
+        */
+        content: "\200e";
+    }
 }
 
 // helpers
